plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.threeboys'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'//웹용
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server' // 앱용
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'com.h2database:h2'

	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.junit.jupiter:junit-jupiter'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'com.corundumstudio.socketio:netty-socketio:2.0.13'

	implementation 'com.google.api-client:google-api-client:2.7.2'
	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
	implementation 'com.google.http-client:google-http-client-gson:1.43.3'
	implementation 'com.google.http-client:google-http-client-jackson2:1.43.3'

	//jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	//webClient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'


	implementation 'org.apache.httpcomponents.client5:httpclient5:5.4.3'
	implementation 'org.apache.httpcomponents.core5:httpcore5:5.3.1'

	//fcm
	implementation 'com.google.firebase:firebase-admin:9.5.0'

	//aws
	implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.3.1'
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.767'

	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

}

tasks.named('test') {
	useJUnitPlatform()
}
